# dropbox-migration

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
deploy/: build_and_push.sh  docker-entrypoint.sh  rsync_to_remote.sh  submit_job.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
scripts/: dropbox_oauth_setup.py  oauth_setup.py
src/dropbox_to_gdrive/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  dropbox_client.py  gdrive_client.py  migrator.py  progress.py  proxy.py  secrets.py
tests/: __init__.py  test_checkpoint.py  test_config.py  test_migrator.py  test_progress.py  test_proxy.py
