[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropbox-to-gdrive"
version = "0.1.0"
description = "Migrate files from Dropbox personal account to Google Drive personal account"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dropbox Migration" }]
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "requests[socks]>=2.31",
    "dropbox>=12.0",
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
dropbox-to-gdrive = "dropbox_to_gdrive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
